--- a/client/angularRestaurant/src/app/about/about.component.html
+++ b/client/angularRestaurant/src/app/about/about.component.html
@@ -1,12 +1,47 @@
-<section id="hakkimizda" class="container my-5">
-  <h2 class="text-center">Hakkımızda</h2>
-  <p class="text-center">Lezzet Durağı, yıllardır en kaliteli pizza ve hamburgerleri müşterileriyle buluşturuyor. Taptaze malzemelerle hazırlanan menümüz, damak tadınıza hitap edecek.</p>
-  <br>
-
+<div class="container-xxl py-5">
   <div class="container">
-    <ul *ngFor="let item of abouts">
-      <li>{{item.id}} - {{item.title}}</li>
-      <p>{{item.description}}</p>
-    </ul>
+      <div class="row g-5 align-items-center">
+          <div class="col-lg-6">
+              <div class="row g-3">
+                  <div class="col-6 text-start">
+                      <img class="img-fluid rounded w-100 wow zoomIn" data-wow-delay="0.1s" src="img/about-1.jpg">
+                  </div>
+                  <div class="col-6 text-start">
+                      <img class="img-fluid rounded w-75 wow zoomIn" data-wow-delay="0.3s" src="img/about-2.jpg" style="margin-top: 25%;">
+                  </div>
+                  <div class="col-6 text-end">
+                      <img class="img-fluid rounded w-75 wow zoomIn" data-wow-delay="0.5s" src="img/about-3.jpg">
+                  </div>
+                  <div class="col-6 text-end">
+                      <img class="img-fluid rounded w-100 wow zoomIn" data-wow-delay="0.7s" src="img/about-4.jpg">
+                  </div>
+              </div>
+          </div>
+          <div class="col-lg-6" *ngFor="let item of aboutList">
+              <h5 class="section-title ff-secondary text-start text-primary fw-normal">Hakkımızda</h5>
+              <h1 class="mb-4">Restaurantımıza <i class="fa fa-utensils text-primary me-2"></i>Hoşgeldiniz!</h1>
+              <p class="mb-4"> {{item.description}}</p>
+              <div class="row g-4 mb-4">
+                  <div class="col-sm-6">
+                      <div class="d-flex align-items-center border-start border-5 border-primary px-3">
+                          <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">15</h1>
+                          <div class="ps-4">
+                              <p class="mb-0">Yıllık</p>
+                              <h6 class="text-uppercase mb-0">Deneyim</h6>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col-sm-6">
+                      <div class="d-flex align-items-center border-start border-5 border-primary px-3">
+                          <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">10</h1>
+                          <div class="ps-4">
+                              <p class="mb-0">Uzman</p>
+                              <h6 class="text-uppercase mb-0">Şef</h6>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
   </div>
-</section>
+</div>
