--- a/client/angularRestaurant/src/app/menu/menu.component.html
+++ b/client/angularRestaurant/src/app/menu/menu.component.html
@@ -1,8 +1,8 @@
 <div class="container-xxl py-5">
   <div class="container">
       <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-          <h5 class="section-title ff-secondary text-center text-primary fw-normal">Yemek Menümüz</h5>
-          <h1 class="mb-5">Most Popular Items</h1>
+          <h5 class="section-title ff-secondary text-center text-primary fw-normal">Menümüz</h5>
+          <h1 class="mb-5">Popüler Seçenekler</h1>
       </div>
       <div class="tab-class text-center wow fadeInUp" data-wow-delay="0.1s">
           <ul class="nav nav-pills d-inline-flex justify-content-center border-bottom mb-5">
@@ -10,7 +10,7 @@
                   <a class="d-flex align-items-center text-start mx-3 ms-0 pb-3"
                      [ngClass]="{'active': selectedTab === category.id}"
                      (click)="selectTab(category.id)">
-                      <i class="fa fa-coffee fa-2x text-primary"></i>
+                      <i class="{{category.icon}} fa-2x text-primary"></i>
                       <div class="ps-3">
                           <h6 class="mt-n1 mb-0">{{ category.categoryName }}</h6>
                       </div>
