Edited menus and Added FooterAddress

--- a/client/angularRestaurant/src/app/admin/category/category.component.html
+++ b/client/angularRestaurant/src/app/admin/category/category.component.html
@@ -42,7 +42,7 @@
       <div class="modal-body">
         <div class="form-group">
           <label>Kategori Adı</label>
-          <input type="text" name="categoryName" [(ngModel)]="category.categoryName" required="">
+          <input type="text" class="form-control" name="categoryName" [(ngModel)]="category.categoryName" required="">
         </div>
       </div>
       <div class="modal-footer">
@@ -67,7 +67,7 @@
       <div class="modal-body">
         <div class="form-group">
           <label>Kategori Adı</label>
-          <input type="text" name="categoryName" [(ngModel)]="editCategory.categoryName" required="">
+          <input type="text" class="form-control" name="categoryName" [(ngModel)]="editCategory.categoryName" required="">
         </div>
       </div>
       <div class="modal-footer">
