--- a/client/angularRestaurant/src/app/menu/menu.component.html
+++ b/client/angularRestaurant/src/app/menu/menu.component.html
@@ -1,47 +1,44 @@
 <div class="container-xxl py-5">
   <div class="container">
-      <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-          <h5 class="section-title ff-secondary text-center text-primary fw-normal">Menümüz</h5>
-          <h1 class="mb-5">Popüler Seçenekler</h1>
-      </div>
-      <div class="tab-class text-center wow fadeInUp" data-wow-delay="0.1s">
-          <ul class="nav nav-pills d-inline-flex justify-content-center border-bottom mb-5">
-              <li *ngFor="let category of categories; let i = index" class="nav-item">
-                  <a class="d-flex align-items-center text-start mx-3 ms-0 pb-3"
-                     [ngClass]="{'active': selectedTab === category.id}"
-                     (click)="selectTab(category.id)">
-                      <i class="{{category.icon}} fa-2x text-primary"></i>
-                      <div class="ps-3">
-                          <h6 class="mt-n1 mb-0">{{ category.categoryName }}</h6>
-                      </div>
-                  </a>
-              </li>
-          </ul>
-          <div [ngSwitch]="selectedTab">
-              <div *ngFor="let item of categories">
-                  <div *ngSwitchCase="item.id" class="tab-content">
-                      <div *ngFor="let menu of item.menus; let i = index">
-                          <div class="tab-pane fade show p-0">
-                              <div class="row g-4">
-                                  <div class="col-lg-6">
-                                      <div class="d-flex align-items-center">
-                                          <img class="flex-shrink-0 img-fluid rounded" src="{{ menu.imageUrl }}" alt="" style="width: 80px;">
-                                          <div class="w-100 d-flex flex-column text-start ps-4">
-                                              <h5 class="d-flex justify-content-between border-bottom pb-2">
-                                                  <span>&nbsp; {{ menu.title }}</span>
-                                                  <span class="text-primary">{{ menu.price | currency:'₺' }} </span>
-                                              </h5>
-                                              <small class="fst-italic">{{ menu.description }}</small>
-                                          </div>
-                                      </div>
-                                  </div>
-                              </div>
-                              <br>
-                          </div>
-                      </div>
-                  </div>
+    <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
+      <h5 class="section-title ff-secondary text-center text-primary fw-normal">Menümüz</h5>
+      <h1 class="mb-5">Popüler Seçenekler</h1>
+    </div>
+
+    <div class="tab-class text-center wow fadeInUp" data-wow-delay="0.1s">
+      <ul class="nav nav-pills d-inline-flex justify-content-center border-bottom mb-5">
+        <li *ngFor="let category of categories" class="nav-item">
+          <a href="javascript:void(0)"
+             class="d-flex align-items-center text-start mx-3 ms-0 pb-3"
+             [ngClass]="{'active': selectedTab === category.id}"
+             (click)="selectTab(category.id)">
+            <i class="{{category.icon}} fa-2x text-primary"></i>
+            <div class="ps-3">
+              <h6 class="mt-n1 mb-0">{{ category.categoryName }}</h6>
+            </div>
+          </a>
+        </li>
+      </ul>
+
+      <!-- Seçilen kategoriye göre menüleri göster -->
+      <div *ngFor="let category of categories">
+        <div *ngIf="selectedTab === category.id">
+          <div class="row g-4">
+            <div class="col-lg-6" *ngFor="let menu of category.menus">
+              <div class="d-flex align-items-center">
+                <img class="flex-shrink-0 img-fluid rounded" [src]="menu.imageUrl" alt="" style="width: 80px; height: 80px;">
+                <div class="w-100 d-flex flex-column text-start ps-4">
+                  <h5 class="d-flex justify-content-between border-bottom pb-2">
+                    <span>{{ menu.title }}</span>
+                    <span class="text-primary">{{ menu.price | currency:'₺' }}</span>
+                  </h5>
+                  <small class="fst-italic">{{ menu.description }}</small>
+                </div>
               </div>
-          </div>
+            </div>
+          </div> <!-- row -->
+        </div>
       </div>
-  </div>
+    </div>
+  </div>
 </div>
