--- a/client/angularRestaurant/src/app/layouts/admin-layout/admin-layout.component.html
+++ b/client/angularRestaurant/src/app/layouts/admin-layout/admin-layout.component.html
@@ -5,7 +5,7 @@
       <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-dark">
           <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
               <a href="/" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
-                  <span class="fs-5 d-none d-sm-inline">Menu</span>
+                  <span class="fs-5 d-none d-sm-inline">AngularRestaurant</span>
               </a>
               <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
                   <li class="nav-item">
@@ -25,38 +25,21 @@
                         <i class="fs-4 bi-pen"></i>
                         <span class="ms-1 d-none d-sm-inline">Menü</span>
                       </a>
-                </li>
-                  <li>
-                      <a href="#submenu3" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
-                          <i class="fs-4 bi-grid"></i>
-                          <span class="ms-1 d-none d-sm-inline">Products</span>
-                        </a>
-                          <ul class="collapse nav flex-column ms-1" id="submenu3" data-bs-parent="#menu">
-                      </ul>
                   </li>
                   <li>
-                      <a href="#" class="nav-link px-0 align-middle">
-                          <i class="fs-4 bi-people"></i>
-                          <span class="ms-1 d-none d-sm-inline">Customers</span>
-                        </a>
+                    <a routerLink="about" routerLinkActive="about" class="nav-link px-0 align-middle">
+                        <i class="fs-4 bi-house"></i>
+                        <span class="ms-1 d-none d-sm-inline">Hakkımızda</span>
+                      </a>
+                  </li>
+                  <li>
+                    <a routerLink="chef" routerLinkActive="chef" class="nav-link px-0 align-middle">
+                        <i class="fs-4 bi-house"></i>
+                        <span class="ms-1 d-none d-sm-inline">Şefler</span>
+                      </a>
                   </li>
               </ul>
               <hr>
-              <div class="dropdown pb-4">
-                  <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-                      <img src="https://github.com/mdo.png" alt="hugenerd" width="30" height="30" class="rounded-circle">
-                      <span class="d-none d-sm-inline mx-1">loser</span>
-                  </a>
-                  <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
-                      <li><a class="dropdown-item" href="#">New project...</a></li>
-                      <li><a class="dropdown-item" href="#">Settings</a></li>
-                      <li><a class="dropdown-item" href="#">Profile</a></li>
-                      <li>
-                          <hr class="dropdown-divider">
-                      </li>
-                      <li><a class="dropdown-item" href="#">Sign out</a></li>
-                  </ul>
-              </div>
           </div>
       </div>
       <div class="col py-3">
