Added Admin Service and Footer component

--- a/client/angularRestaurant/src/app/admin/admin-about/admin-about.component.html
+++ b/client/angularRestaurant/src/app/admin/admin-about/admin-about.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <br>
-  <h3>Kategoriler</h3>
+  <h3>Hakkımızda</h3>
   <br>
 <table class="table table-bordered">
   <thead>
