--- a/client/angularRestaurant/src/app/layouts/admin-layout/admin-layout.component.html
+++ b/client/angularRestaurant/src/app/layouts/admin-layout/admin-layout.component.html
@@ -1,3 +1,4 @@
+
 <html>
   <body>
 <div class="container-fluid">
@@ -36,6 +37,18 @@
                     <a routerLink="chef" routerLinkActive="chef" class="nav-link px-0 align-middle">
                         <i class="fs-4 bi-house"></i>
                         <span class="ms-1 d-none d-sm-inline">Şefler</span>
+                      </a>
+                  </li>
+                  <li>
+                    <a routerLink="service" routerLinkActive="service" class="nav-link px-0 align-middle">
+                        <i class="fs-4 bi-house"></i>
+                        <span class="ms-1 d-none d-sm-inline">Hizmetler</span>
+                      </a>
+                  </li>
+                  <li>
+                    <a routerLink="footer" routerLinkActive="footer" class="nav-link px-0 align-middle">
+                        <i class="fs-4 bi-house"></i>
+                        <span class="ms-1 d-none d-sm-inline">Adres Bilgisi</span>
                       </a>
                   </li>
               </ul>
