Added Admin Reservation Component

--- a/client/angularRestaurant/src/app/admin/admin-chef/admin-chef.component.html
+++ b/client/angularRestaurant/src/app/admin/admin-chef/admin-chef.component.html
@@ -23,6 +23,7 @@
       <button type="button" class="btn btn-danger" (click)="delete(item.chefId)">
         Sil
       </button>
+      &nbsp;
       <button type="button" class="btn btn-info" (click)="onSelected(item)" data-bs-toggle="modal" data-bs-target="#editModal">
         Güncelle
       </button>
