--- a/client/angularRestaurant/src/app/layouts/admin-layout/admin-layout.component.html
+++ b/client/angularRestaurant/src/app/layouts/admin-layout/admin-layout.component.html
@@ -28,6 +28,12 @@
                       </a>
                   </li>
                   <li>
+                    <a routerLink="reservation" routerLinkActive="reservation" class="nav-link px-0 align-middle">
+                        <i class="fs-4 bi-pen"></i>
+                        <span class="ms-1 d-none d-sm-inline">Rezervasyonlar</span>
+                      </a>
+                  </li>
+                  <li>
                     <a routerLink="about" routerLinkActive="about" class="nav-link px-0 align-middle">
                         <i class="fs-4 bi-house"></i>
                         <span class="ms-1 d-none d-sm-inline">Hakkımızda</span>
