--- a/client/angularRestaurant/src/app/admin/admin-service/admin-service.component.html
+++ b/client/angularRestaurant/src/app/admin/admin-service/admin-service.component.html
@@ -24,6 +24,7 @@
       <button type="button" class="btn btn-danger" (click)="delete(item.serviceId)">
         Sil
       </button>
+      &nbsp;
       <button type="button" class="btn btn-info" (click)="onSelected(item)" data-bs-toggle="modal" data-bs-target="#editModal">
         Güncelle
       </button>
