--- a/client/angularRestaurant/src/app/admin/category/category.component.html
+++ b/client/angularRestaurant/src/app/admin/category/category.component.html
@@ -17,6 +17,7 @@
       <button type="button" class="btn btn-danger" (click)="delete(item.id)">
         Sil
       </button>
+      &nbsp;
       <button type="button" class="btn btn-info" (click)="onSelected(item)" data-bs-toggle="modal" data-bs-target="#editModal">
         Güncelle
       </button>
